<resources>
    <string name="app_name">SimpleNoteTaker</string>
    <string name="all_notes">All Notes</string>
    <string name="add_note">Add Note</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title">Title</string>
    <string name="preferences">.preferences</string>
    <string name="navigation">Navigation</string>
    <string name="menu_delete">Delete</string>
    <string name="created_date_newest_first">Created Date( newest first )</string>
    <string name="created_date_oldest_first">Created Date( oldest first )</string>
    <string name="modified_date_newest_first">Modified Date ( newest first )</string>
    <string name="modified_date_oldest_first">Modified Date ( oldest first )</string>
    <string name="search_hint">Search</string>
</resources>
