<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--
    <item android:id="@+id/menu_search" android:title="@string/search" android:icon="@drawable/ic_search_24dp" app:showAsAction="ifRoom" android:orderInCategory="1"/>

-->
    <item android:id="@+id/menu_delete" android:title="@string/menu_delete" android:icon="@drawable/ic_delete" android:visible="false" app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_search" android:title="@string/search" android:icon="@drawable/ic_search_24dp" app:showAsAction="ifRoom|collapseActionView" app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:title="@string/sort" android:icon="@drawable/ic_sort_24dp" android:orderInCategory="2" app:showAsAction="always">
        <menu>
            <group android:id="@+id/menu_sort_group" android:checkableBehavior="single">
                <item android:id="@+id/title_sort" android:title="@string/title"/>
                <item android:id="@+id/modified_date_asc" android:title="@string/modified_date_newest_first" />
                <item android:id="@+id/modified_date_desc" android:title="@string/modified_date_oldest_first"  />
                <item android:id="@+id/created_date_asc" android:title="@string/created_date_newest_first" />
                <item android:id="@+id/created_date_desc" android:title="@string/created_date_oldest_first"  />
            </group>
        </menu>
    </item>

    <item android:id="@+id/menu_add" android:title="@string/add_note" android:icon="@drawable/ic_add_24dp" app:showAsAction="ifRoom" android:orderInCategory="3"/>

</menu>